Fix 90s theme on Safari

--- a/src/scss/_nineties.scss
+++ b/src/scss/_nineties.scss
@@ -20,6 +20,7 @@
   img, video {
     image-rendering: pixelated;
     filter: url(#pixelate);
+    transform: rotate(0deg); // Fix for Safari! Without this rule, it hides the images (I don't know why)
   }
 
   a {
